# rustchain-wallet

./: .env.sample  Cargo.toml  README.md  package.json
src/: main.rs
src/context/: WalletContext.tsx
src/pages/: ConfirmTransaction.tsx  Dashboard.tsx  SendCoins.tsx  Sending.tsx
src/services/: rustchainService.ts
